# react-agent

./: .env  .gitignore  assistants.ipynb  client-test.ipynb  pyproject.toml
.cursor/rules/: python-best-practices-rules.mdc
src/react_agent/: configuration.py  tools.py
